<?php
/**
 * File that contains the interface with the same name.
 */

namespace TWRP\Icons;

/**
 * Each set of icon definitions class must implement this interface.
 */
interface Icon_Definitions {
	public static function get_definitions();
}
