@startuml "Icons"

!include ./colors.iuml

namespace TWRP\\Icons {
	class Icon_Factory <<public class>> <<static collection>> {
		+ Icon get_icon( $icon_id )
		+ Rating_Icon_Pack get_rating_pack( $rating_pack_id )
		--
		+ array<string,Icon> get_user_icons()
		+ array<string,Icon> get_category_icons()
		+ array<string,Icon> get_comment_icons()
		.. Other category retriever Icons ..
		--
		+ get_compatible_disabled_comment_icon( $icon )
		.. Other unimportant functions ..
	}

	class Icon <<public class>> <<get via factory>> {
		+ __construct( $icon_id, $icon_args )
		+ void display( $additional_class )
		+ string get_html( $additional_class )
		--
		+ get_icon_svg_definition()
		+ get_id()
		+ get_brand()
		+ get_description()
		+ get_icon_file_path()
		.. Other unimportant functions ..
	}

	class Rating_Icon_Pack <<public class>> <<get via factory>> {
		+ __construct( $rating_pack_id, $pack_attr )
		+ Icon get_empty_icon()
		+ Icon get_half_filled_icon()
		+ Icon get_filled_icon()
		--
		+ get_id()
		+ get_brand()
		+ get_description()
		.. Other unimportant functions ..
	}

	class Icon_Categories <<private class>> {}

	namespace Definitions {
		interface Icon_Definitions <<private class>> {}
		class User_Icons <<private class>> {}
		class Date_Icons <<private class>> {}
		class Other_Category_With_Icons <<more identical siblings classes>> <<private class>> {}
		class Rating_Icons <<private class>> {}

		Icon_Definitions <|.. User_Icons
		Icon_Definitions <|.. Date_Icons
		Icon_Definitions <|.. Other_Category_With_Icons
		Icon_Definitions <|.. Rating_Icons
	}

	Icon_Factory ..> Icon : Create Icon by Id.
	Icon_Factory ..> Rating_Icon_Pack : Create Pack by Id.

	Rating_Icon_Pack -r-> Icon : Contains 3 Icons

	Icon --> Icon_Categories

	Icon_Factory --> TWRP\\Icons\\Definitions : Know everything
	Icon --> TWRP\\Icons\\Definitions : Know everything
}
